<resources>
    <string name="app_name">CalculadoraDePropinas</string>
    <string name="amount_prompt">Total Bill Amount</string>
    <string name="amount_hint">e.g 153.23</string>
    <string name="percentage_prompt">Tip Percentage:</string>
    <string name="percentage_15">15%</string>
    <string name="percentage_25">25%</string>
    <string name="percentage_35">35</string>
    <string name="percentage_35_2">35%</string>
    <string name="tip_default">$ 0.00</string>
    <string name="tip_amount_prompt">Tip Amount:</string>
    <string name="total_amount_prompt">Total Amount with tip:</string>
    <string name="round_button">Round Tip</string>
</resources>